# youtube-helper

./: .gitignore  CHANGELOG.md  Dockerfile  EXAMPLES.md  GUI.md  LANDSCAPE.md  LISEZMOI.md  PAYSAGE.md  README.md  TRIGGERS.md  pyproject.toml  requirements-dev.txt  requirements.txt
assets/: landscape.csv  paysage.csv
skills/: README.md
skills/youtube-helper/: SKILL.md
skills/youtube-helper/references/: cli-reference.md  surfaces.md  triggers.md
tests/: __init__.py  test_api.py  test_branding.py  test_cli.py  test_extract_frames_stream.py  test_mcp.py  test_smoke.py  test_streaming.py  test_youtube_helper.py
youtube_helper/: __init__.py  api.py  branding.py  cli_argparse.py  cli_click.py  gui.py  main.py  mcp.py  streaming.py
